--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -8,10 +8,10 @@ ul.movies {
   margin: 0;
 }
 
-/* Stiluri generale pentru secțiunea galeriei */
-.gallery {
-  padding: 60px 0; /* Spațiu vertical în jurul galeriei */
-}
+// Flori
+// .gallery {
+//   padding: 60px 0; 
+// }
 
 /* Grila de filme pentru afișare */
 .movies,
