update pentru functionalitatea de search + erori in UI

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,6 +21,13 @@
           </svg>
         </button>
       </div>
+      <p
+        id="search-error"
+        class="search-error-message"
+        style="display: none;"
+      >
+        Search result not successful. Enter the correct movie name.
+      </p>
     </form>
 
     <!-- Logo -->
