team-modal&footer
-am stilizat modalul din footer si am rezolvat adaptabilitatea pentru dispozitive
-am resuscitat inimioara
-am adaugat imagini de  profil

--- a/src/partials/about_footer.html
+++ b/src/partials/about_footer.html
@@ -1,5 +1,5 @@
 <div class="backdrop-modal modal-backdrop-hiden">
-  <div class="team-modal">
+  <div class="team-modal kontainer">
     <button class="team-button-close close-team-modal">
         <svg class="team-icon team-icon-close">
             <use href="./images/icons.svg#icon-close"></use>
@@ -9,18 +9,18 @@
     <div class="team-container">
         <div class="team__member">
             <div class="team__card">
-             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             <img class="team__photo" src="./images/flori-moise.jpg"
              alt="Anonim"/>
             </div>
            <a class="team__link"
-           href="https://github.com/"
+           href="https://github.com/MoiseFlori"
            target="_blank">
            <svg class="team__github" width="25" height="25">
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Flori Moise</p>
+           <p class="team__role">Team Lead</p>
          </div>
          <div class="team__member">
             <div class="team__card">
@@ -34,8 +34,8 @@
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Grațiela Chirtop</p>
+           <p class="team__role">Scrum Master</p>
          </div>
          <div class="team__member">
             <div class="team__card">
@@ -49,8 +49,8 @@
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Victoria Daguța</p>
+           <p class="team__role">Developer</p>
          </div>
          <div class="team__member">
             <div class="team__card">
@@ -64,8 +64,8 @@
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Adeline Cozma</p>
+           <p class="team__role">Developer</p>
          </div>
          <div class="team__member">
             <div class="team__card">
@@ -79,8 +79,8 @@
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Claudiu Tănase</p>
+           <p class="team__role">Developer</p>
          </div>
          <div class="team__member">
             <div class="team__card">
@@ -94,38 +94,23 @@
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Florin Palamariu</p>
+           <p class="team__role">Developer</p>
          </div>
          <div class="team__member">
             <div class="team__card">
-             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             <img class="team__photo" src="./images/abiatar-cosma.jpg"
              alt="Anonim"/>
             </div>
            <a class="team__link"
            href="https://github.com/"
            target="_blank">
-           <svg class="team__github" width="25" height="25">
+           <svg class="https://github.com/Abiatar-Cosma" width="25" height="25">
             <use href="./images/icons.svg#icon-github"></use>
            </svg>
            </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
-         </div>
-         <div class="team__member">
-            <div class="team__card">
-             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
-             alt="Anonim"/>
-            </div>
-           <a class="team__link"
-           href="https://github.com/"
-           target="_blank">
-           <svg class="team__github" width="25" height="25">
-            <use href="./images/icons.svg#icon-github"></use>
-           </svg>
-           </a>
-           <p class="team__name">Nume Membru</p>
-           <p class="team__role">Rol Membru</p>
+           <p class="team__name">Abiatar Cosma</p>
+           <p class="team__role">Developer</p>
          </div>
     </div>
   </div>
