--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -50,7 +50,28 @@
     margin-left: 10px;
     margin-right: 10px;
     display: block;
+    animation: bounce 2s infinite;
+    transition: filter 0.2s ease-in-out;
   }
+  
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateY(0) scale(1); /* Dimensiunea normală */
+      filter: hue-rotate(0deg); /* Culoare inițială */
+    }
+    50% {
+      transform: translateY(-50px) scale(1.5); /* Mai mare la punctul de sus */
+      filter: hue-rotate(400deg); /* Schimbă nuanța */
+    }
+  }
+  
+  .heart-icon:hover {
+    transform: scale(2.2); /* Efect separat la hover */
+    box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
+  }
+  
+  
+  
   
   .credits-text {
     padding-top: 10px;
