--- a/src/sass/_about-footer.scss
+++ b/src/sass/_about-footer.scss
@@ -81,7 +81,7 @@
   height: 100%;
   border-radius: 15px;
   padding-left: 20px;
-  max-height: 656px;
+  max-height: 90vh;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8), inset 0 0 50px rgba(255, 255, 255, 0.2);
   
 
