update-team-member-images
am dezactivat efectul de hover pentru .team-member
am adaugat poza profil

--- a/src/partials/about_footer.html
+++ b/src/partials/about_footer.html
@@ -39,7 +39,7 @@
          </div>
          <div class="team__member">
             <div class="team__card">
-             <img class="team__photo" src="./images/avatars-000425326518-6qekg1-t240x240.jpg"
+             <img class="team__photo" src="./images/victoria-daguta.jpg"
              alt="Anonim"/>
             </div>
            <a class="team__link"
