schimbare stilizare butoane + modal

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <!-- Header Buttons -->
     <div class="header-buttons-container">
-      <button id="home-btn" class="header-btn">HOME</button>
+      <a href="index.html" id="home-btn" class="header-btn">HOME</a>
       <button id="library-btn" class="header-btn">MY LIBRARY</button>
     </div>
 
@@ -21,22 +21,18 @@
           </svg>
         </button>
       </div>
-      <p
-        id="search-error"
-        class="search-error-message"
-        style="display: none;"
-      >
+      <p id="search-error" class="search-error-message" style="display: none">
         Search result not successful. Enter the correct movie name.
       </p>
     </form>
 
     <!-- Logo -->
-    <div class="logo-container">
+    <a href="index.html" class="logo-container">
       <svg class="logo-icon" width="48" height="48">
         <use href="./images/icons.svg#icon-film"></use>
       </svg>
       <h1 class="logo-text">Filmoteka</h1>
-    </div>
+    </a>
 
     <!-- Library Buttons -->
     <div
