--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -72,6 +72,7 @@
   border-radius: 3px;
   height: max-content;
 }
+
 #modal-content {
   display: flex;
   align-items: start;
@@ -80,10 +81,12 @@
 .img-posters {
   position: relative;
   width: 375px;
-  height: 478px;
-  background-size: cover;
+  height: 475px;
+  background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
   margin-right: 16px;
+  border-radius: 5px;
 }
 
 .trailer-btn {
@@ -253,7 +256,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 280px;
-    max-height: 100vh;
+    max-height: 90vh;
     overflow-y: auto;
     padding: 48px 20px 40px 20px;
     background-color: #fff;
@@ -264,6 +267,7 @@
   #modal-content {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .img-posters {
@@ -271,6 +275,7 @@
     max-width: 240px;
     height: 357px;
     margin-bottom: 20px;
+    margin-right: 0;
   }
 
   .trailer-btn {
@@ -351,6 +356,7 @@
     height: 374px;
     flex-shrink: 0;
     border-radius: 5px;
+    margin-right: 8px;
   }
 
   .trailer-btn {
