--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,6 +4,17 @@
     <div class="header-buttons-container">
       <a href="index.html" id="home-btn" class="header-btn">HOME</a>
       <button id="library-btn" class="header-btn">MY LIBRARY</button>
+
+      <div class="theme-switcher">
+        <label class="theme-switcher__toggle">
+          <input
+            type="checkbox"
+            id="themeSwitcherCheckbox"
+            class="theme-switcher__checkbox"
+          />
+          <span class="theme-switcher__slider"></span>
+        </label>
+      </div>
     </div>
 
     <!-- Search Form -->
