--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 999;
+  z-index: 1001;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.7);
 }
@@ -71,6 +71,7 @@
   max-height: 558px;
   border-radius: 3px;
   height: max-content;
+  overflow-y: auto;
 }
 
 #modal-content {
@@ -82,7 +83,7 @@
   position: relative;
   width: 375px;
   height: 475px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 16px;
@@ -333,6 +334,7 @@
   .modal-wrapper {
     overflow: hidden;
   }
+
   body.modal-open {
     overflow: hidden;
   }
@@ -355,8 +357,11 @@
     width: 264px;
     height: 374px;
     flex-shrink: 0;
-    border-radius: 5px;
     margin-right: 8px;
+  }
+
+  .poster-image {
+    border-radius: 5px;
   }
 
   .trailer-btn {
