update pagination for My library

--- a/src/partials/gallery-library.html
+++ b/src/partials/gallery-library.html
@@ -2,5 +2,7 @@
   <div class="container">
     <!-- Library List -->
     <ul class="movies library-list"></ul>
+    <div class="pagination-container">
+      </div>
   </div>
 </section>
