am actualiat stilizarea paginarii pentru my library

--- a/src/partials/gallery-library.html
+++ b/src/partials/gallery-library.html
@@ -2,7 +2,6 @@
   <div class="container">
     <!-- Library List -->
     <ul class="movies library-list"></ul>
-    <div class="pagination-container">
-      </div>
+    <div class="pagination"></div>
   </div>
 </section>
