--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -1,6 +1,7 @@
 @import './breakpoints';
 
-.pagination-container {
+.pagination-container,
+.pagination {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +51,7 @@
   border: none;
   background: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 
   &:not(:last-child) {
